src/test/deca/syntax/valid/objet/ClassDecl.deca
// Description : Test la declaration simple d'une classe
// Resultat : OK

class Thing {
}
