src/test/deca/syntax/invalid/ClassExtendsSansNom.deca
//Classe extends mais sans nom d'extends

class Thing extends {
}
